tests/api/reference/negative/06-target-isa-value.asm
const current_isa = target.isa
